@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Display recipes a player knows that can use an item when examining it.
+Nicolas Weeger 2011-07-08
+
 Tentative fix for bug #3349111: invidious server crash.
 Don't decrease socket_info.nconns if the socket is not available.
 In some cases nconns gets decreased too much, which leads to issues.
